[package]
name = "clickhouse-sink-macros"
version = "1.0.0"
edition = "2021"
description = "Procedural macros for ClickHouse latency measurement"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing"] }
