[package]
name = "clickhouse-sink"
version = "1.0.22"
edition = "2021"
description = "ClickHouse data sink for telemetry"
license = "MIT"

[dependencies]
anyhow = "1.0.91"
clickhouse = { version = "0.14.0", features = [
    "uuid",
    "time",
    "native-tls",
    "inserter",
] }
tokio = "1.47.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rust-embed = "8.2.0"
time = "0.3.36"
log = "0.4.21"
once_cell = "1.19.0"
tracing = "0.1.40"
